c/examples/writing-a-c-compiler-tests/tests/chapter_16/valid/strings_as_lvalues/simple.c
int main(void) {
    char *x = "Hello, World!";
    return x[2];
}