c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_lex/newline.c
char *s = "hello
    world ";

    int
    main(void)
{
    return 0;
}